# raspberry-pi-kws

./: .gitignore  CMakeLists.txt  README.md  blink_service.py  fbank.conf  nnet_forward.sh  query_by_pc.py  query_by_pipe.py  query_by_raspberry.py  run.sh
PyFbank/: CMakeLists.txt  main.cpp
PyNnet1/: main.cpp  nnet-wrapper.cpp  nnet-wrapper.h
java/: Android.mk  Application.mk  EnergyVad.java  EnrollmentThread.java  README.md
pyfbank/: segment-fbank-computer.cpp  segment-fbank-computer.h
pynnet1/: CMakeLists.txt  nnet-wrapper.cpp
utils/: CMakeLists.txt  tpl-average-test.cpp  tpl-average.cpp  tpl-average.h  wave-segment.cpp
